--- a/Sobrenosotros.html
+++ b/Sobrenosotros.html
@@ -24,7 +24,8 @@
     <main>
         <div>
         <h1>Nuestro Trabajo</h1></div> <br> <br><br>
-        <p> <h3>Estamos trabajando en cambiar la forma en que funciona el mundo,
+       <h3><p>Somos una organizacion sin fines de lucro para darle una mejor vida a nuestros amigos de 4 patas</p>
+        <p>Estamos trabajando en cambiar la forma en que funciona el mundo,
              para terminar con la crueldad y el sufrimiento animal. 
             Para siempre.</p><br>
             El número de perros y animales en las calles crece día con día, lo que trae miseria y sufrimiento para millones alrededor del mundo. 
